objects/TwoSP__c.object
<CustomObject>
    <fields>
        <fullName>Part_No__c</fullName>
        <label>Part No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY__c</fullName>
        <label>QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVC__c</fullName>
        <label>SVC</label>
        <referenceTo>SVC__c</referenceTo>
        <relationshipLabel>2SP</relationshipLabel>
        <relationshipName>TwoSP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Use_Date__c</fullName>
        <label>Use Date</label>
        <type>Date</type>
    </fields>
    <label>2SP</label>
    <nameField>
        <displayFormat>2SP-{0000}</displayFormat>
        <label>2SP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>